index.css
/*
 * dol iframe
 */
.ryanshy-iframe {
    position:fixed;
    top:0;
    left: 0;
    bottom: 0;
    right: 0;
    width: 100%;
    height: 100%;
    border: none;
    margin: 0;
    padding: 0;
    z-index: 990;
    overflow: hidden;
}
/*
 * overlay base
 */
.ryanshy-greyout {
    background-color: #222;
    opacity: 50%;
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    width: 100%;
    height: 100%;
    border: none;
    margin: 0;
    padding: 0;
    z-index: 995;
    overflow: hidden;
}

.ryanshy-greyout-disabled {
    position: absolute;
    z-index: -1;
    visibility: hidden;
    overflow: hidden;
}

.ryanshy-save-overlay-disabled {
    position: absolute;
    z-index: -1;
    visibility: hidden;
    overflow: hidden;
}

.ryanshy-save-overlay-enabled {
    position: absolute;
    z-index: 1000;
    visibility: visible;
    border: 1px solid #ccc;
    background-color: #222;
    height: max(400px, 70%);
    width: max(300px, 70%);
    right: calc(50% - max(300px, 70%)/2);
    top: calc(50% - max(400px, 70%)/2);
    text-align: center;
    color: rgb(238, 238, 238);
    padding: 0px;
    max-width: 1000px;
    max-height: 800px;
}
/*
 * overlay elements
 */
/*
 * overlay exit button
 */
.ryanshy-exit-button {
    position: absolute;
    z-index: 1015;
    right: 1em;
    top: 1em;
    content: " ";
    height: 24px;
    width: 24px;
    cursor: pointer;
    pointer-events: all;
}

.ryanshy-exit-button::before {
    transform: rotate(45deg);
}

.ryanshy-exit-button::after {
    transform: rotate(-45deg);
}

.ryanshy-exit-button::before {
    position: absolute;
	top: 0;
	left: 10px;
    content: " ";
    height: 24px;
    width: 3px;
    background-color: #ddd;
}

.ryanshy-exit-button::after {
    position: absolute;
	top: 0;
	left: 10px;
    content: " ";
    height: 24px;
    width: 3px;
    background-color: #ddd;
}
/*
 * overlay tabs
 */
.ryanshy-overlay-tab {
    position: absolute;
    z-index: 1010;
    border: 1px solid #ccc;
    background-color: #222;
    top: 0;
    height: 24px;
    width: 100px;
    cursor: pointer;
    text-align: center;
    margin: -1px;
    padding-top: 1.25em;
    padding-bottom: 0.75em;
    vertical-align: middle;
}
.ryanshy-overlay-tab[current] {
    border-bottom: none;
    height: 25px;
}

#ryanshy-overlay-tab-login {
    left: 1em;
}

#ryanshy-overlay-tab-saves {
    left: calc(1em + 100px);
}

#ryanshy-overlay-tab-settings {
    left: calc(1em + 200px);
}
/*
 * overlay panels
 */
.ryanshy-panels {
    z-index: 1004;
    overflow-y: scroll;
    overflow-x: hidden;
    scrollbar-width: none;
    scrollbar-color: #ddd #222;
    scrollbar-gutter: auto;
    width: calc(100% - 10px);
    height: calc(100% - 2em - 24px - 1px);
    margin: 0px;
    padding-left: 10px;
}

.ryanshy-panel-disabled {
    position: absolute;
    z-index: -1;
    visibility: hidden;
    height: 0;
    overflow: hidden;
}

.ryanshy-panel-enabled {
    /*border: 1px solid #ccc;*/
    background-color: #222;
    width: calc(100% - 2px - 2px);
    height: calc(100% - 2em);
    margin: -2px;
    padding-top: 1em;
    padding-bottom: 1em;
    z-index: 1005;
}
/*
 * overlay inner elements
 */
.ryanshy-custom-overlay-placeholder {
    position: relative;
    margin: -1px;
    height: calc(2em + 24px); /*2em padding, 24px height, 1px border*/
    background-color: #444;
    border: 1px solid #ccc;
    z-index: 1007;
}

.ryanshy-custom-overlay {
    border: 1px solid #ccc;
    background-color: #222;
    width: 100%;
    margin: -1px;
    padding-top: 1em;
    padding-bottom: 1em;
    z-index: 1005;
}

/*
 * login panel elements
 */
.ryanshy-login-element {
    height: fit-content;
    width: 100%;
}

.ryanshy-input-name {
    display: inline-block;
    width: 100px;
}
/*
 * settings panel elements
 */
.ryanshy-settings-element {
    height: fit-content;
    width: 100%;
}

.ryanshy-change-password-element {
    height: fit-content;
    width: 100%;
}
/*
 * saves panel elements
 */
.ryanshy-saves-element {
    height: fit-content;
    width: 100%;
}

.ryanshy-saves-table {
    width: 100%;
}

.ryanshy-saves-table-head {
    border-top: 2px solid #444;
    border-bottom: 2px solid #444;
}

.ryanshy-saves-table-row {
    border-bottom: 1px solid #444;
}

.ryanshy-number-col {
    width: 5%;
    text-align: center;
}

.ryanshy-save-load-col {
    width: 20%;
}

.ryanshy-id-name-col {
    width: auto;
}

.ryanshy-date-col {
    width: 20%;
}

.ryanshy-delete-col {
    width: 20%;
}

/*
 * Toast stuff
 */
#ryanshy-toast {
    visibility: hidden;
    min-width: 250px;
    background-color: #222;
    border: 1px solid #ccc;
    color: #fff;
    text-align: center;
    padding: 1em;
    position: fixed;
    z-index: 1015;
    right: 30px;
    bottom: 30px;
}

#ryanshy-toast.show {
    visibility: visible;
    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
    animation: fadein 0.5s, fadeout 0.5s 2.5s;
}

@-webkit-keyframes fadein {
    from {right: -250px; opacity: 0;}
    to {right: 30px; opacity: 1;}
}

@keyframes fadein {
    from {right: -250px; opacity: 0;}
    to {right: 30px; opacity: 1;}
}

@-webkit-keyframes fadeout {
    from {right: 30px; opacity: 1;}
    to {right: -250px; opacity: 0;}
}

@keyframes fadeout {
    from {right: 30px; opacity: 1;}
    to {right: -250px; opacity: 0;}
}

.red {
    color: red;
}

.green {
    color: lightgreen;
}

